# book_scrape

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: README.md  pyproject.toml
backend/app/: __init__.py
backend/app/api/: main.py
backend/app/core/: redis.py
backend/app/models/: book.py  headline.py
backend/app/services/: scrape_books.py  scrape_hn.py
backend/app/tests/: test_api.py
frontend/: Dockerfile  README.md  jest.config.js  jest.setup.js  next.config.mjs  package-lock.json  package.json
frontend/__tests__/: components.test.tsx  page.test.tsx
frontend/app/: layout.tsx  page.tsx
frontend/components/: book-card.tsx
